# small-db-v2

./: .bazelrc  .clang-format  .clang-format-ignore  .clang-format.bak2  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  MODULE.bazel  README.md  WORKSPACE  compile_commands.json  compile_commands_sorted.json  conanfile.txt  grpc.cmake  libarrow.BUILD  small.supp
.github/workflows/: ci.yml  cmake-single-platform.yml  play.yml
battery/: BUILD  embed.h  simple.cc
cmake/helper/: CMakeLists.txt
play/: CMakeLists.txt  lib_a.cc  lib_a.h  lib_b.cc  lib_b.h  main.cc
play/scripts/: build
scripts/: format.sh
scripts/ci/: build  install-deps  lint
scripts/format/: init.py  run-clang-format.py  run-cpplint.py  run-format.sh
small-db-book/src/: SUMMARY.md
small-db-book/src/appendix/: sql.md
small-db-book/src/single_server/: store_data.md
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base.h  singleton.cc  singleton.h  singleton_test.cc
src/catalog/: CMakeLists.txt  catalog.cc  catalog.h
src/encode/: CMakeLists.txt  encode.cc  encode.h
src/file_system/: CMakeLists.txt  file_system.h
src/fuck_cpp/grpc/: CMakeLists.txt  server.cc
src/gossip/: CMakeLists.txt  gossip.cc  gossip.h
src/id/: CMakeLists.txt  generator.cc  generator.h
src/insert/: CMakeLists.txt  insert.cc  insert.h  insert.proto
src/kv_store/: CMakeLists.txt  kv_store.cc  kv_store.h
src/peers/: server_registry.cc
src/pg_wire/: CMakeLists.txt  pg_wire.cc  pg_wire.h
src/query/: BUILD  CMakeLists.txt  demo_plan.json  embed_example.cc  query.cc  query.h  simple.json  tmp.json  xc_simple_substrait.json  xc_simple_substrait_copy.json
src/rocks/: CMakeLists.txt  rocks.cc  rocks.h  wrapper.cc  wrapper.h
src/schema/: CMakeLists.txt  const.h  partition.cc  partition.h  schema.cc  schema.h
src/semantics/: CMakeLists.txt  check.cc  check.h  extract.h
src/server/: BUILD  CMakeLists.txt  args.cc  args.h  grpc_server.cc  grpc_server.h  main.cc  message.h  server.cc  server.h  server_2.cc  stmt_handler.cc  stmt_handler.h
src/server_base/: CMakeLists.txt  args.cc  args.h
src/server_info/: CMakeLists.txt
src/server_reg/: CMakeLists.txt  server_reg.cc  server_reg.h  server_reg.proto
src/server_registry/: CMakeLists.txt  server_registry.cc  server_registry.h
src/store/: BUILD  CMakeLists.txt  store.cc  store.h
src/tmp/: BUILD  arrow_example.cc  example.cc  hello-world.cc  hello_test.cc  hello_world.cc  log.cc  parquet_rw.cc  parquet_rw.h
src/type/: CMakeLists.txt  type.cc  type.h
src/util/ip/: ip.cc  ip.h
test/integration-test/: BUILD  sql_test.cc
test/integration_test/: CMakeLists.txt  hello_test.cc  sql_test.cc  test.sql  test.sqltest
test/parser/: CMakeLists.txt  parser.cc  parser.h
toolchain/: BUILD  cc_toolchain_config.bzl  cc_toolchain_config_default.bzl
