add_subdirectory(util)
add_subdirectory(server_base)
add_subdirectory(id)
add_subdirectory(encode)
add_subdirectory(type)
add_subdirectory(query)
add_subdirectory(insert)
add_subdirectory(server_registry)
add_subdirectory(rocks)
add_subdirectory(schema)
add_subdirectory(semantics)
add_subdirectory(server)
